# nginx_log_analyzer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  env.example  pyproject.toml
apps/: cli_commands.py  main.py  settings.py
apps/api/: __init__.py
apps/api/v1/cruds/: base_crud.py  log_entry_crud.py  server_crud.py
apps/api/v1/handlers/: analytics_handler.py  log_entry_handler.py  server_handler.py
apps/api/v1/models/: __init__.py  log_entry_model.py  server_model.py
apps/api/v1/schemas/: analytics_schema.py  base_schema.py  log_entry_schema.py  server_schema.py
apps/auth/: __init__.py
apps/auth/dependencies/: auth_dependency.py
apps/auth/handlers/: auth_handler.py
apps/auth/schemas/: user_schema.py
apps/db/: annotated_fields.py  base_db_class.py  enabled_migration_models.py  enabled_migration_schemas.py  session.py
apps/services/: nginx_log_parser.py
apps/static/: index.html
apps/utils/: health_check.py
apps/utils/enums/: cron_enum.py  env_enum.py  flag_enum.py  log_level_enum.py  ml_enum.py  user_role_enum.py
migrations/: env.py  script.py.mako
migrations/versions/: 2025-05-23_init.py
src/: check_spam.joblib
test_simple/: test_basic.py  test_simple.py
tests/: conftest.py  consts.py  mocks.py  test_basic.py
tests/api/: test_health_check.py  test_migrations.py  test_static_files.py
tests/api/crud/: test_base_crud.py
tests/api/handlers/: test_analytics_handler.py  test_log_entry_handler.py  test_server_handler.py
tests/api/schemas/: test_analytics_schema.py
tests/auth/handlers/: test_auth_handler.py
tests/cli/: test_cli_commands.py
tests/db/: test_base_db_class.py
tests/integration/: test_full_workflow.py
tests/services/: test_nginx_log_parser.py
tests/sql_init_data/: base_data_tree.py
tests/sql_init_data/low_level_data_init/nginx_parser/: log_entry_model_init.py  server_model_init.py
